# Nyxian-forked

./: CMakeLists.txt  Makefile  PERFORMANCE_REPORT.md  expand_sysctl.py  final_fix_coordinator.py  final_robustness_pass.py  final_sysctl_overhaul.py  final_sysctl_update.py  fix_bootstrap_concurrency.py  fix_contentview_safety.py  fix_coordinator_threads.py  fix_event_safety.py  fix_filelist_typo.py  fix_kvobject_init.py  fix_ldeprocess_deadlock.py  fix_nxplisthelper_cleanup.py  fix_nxproject_mkdir.py  fix_objectcompiler.py  fix_path_utils.py  fix_proc_uaf.py  fix_processmanager_safety.py  fix_radix_and_event.py  fix_radix_shift.py  fix_signing_deadlock.py  fix_synpush_safety.py  fix_syscall_server_leak.py  fix_syscall_server_log.py  fix_sysctl_struct.py  fix_threadcontroller.py  fix_threadcontroller_v2.py  test_compile.c  update_syscall_list.py  update_sysctl_2026.py
.github/workflows/: build.yml  jailed.yml  rootful.yml  roothide.yml  rootless.yml
LiveProcess/LindChain/Services/trustd/: LDETrust.m
Nyxian/: Bootstrap.swift  bridge-jb.h  bridge.h
Nyxian.xcodeproj/: project.pbxproj
Nyxian/LindChain/Compiler/: Compiler.mm  ObjectCompiler.cpp
Nyxian/LindChain/Core/: Builder.swift  LDEFilesFinder.m
Nyxian/LindChain/Multitask/ProcessManager/: LDEProcess.h  LDEProcess.m  LDEProcessManager.h  LDEProcessManager.m
Nyxian/LindChain/ProcEnvironment/: application.m  environment.m  libmach.h  libmach.m  libproc.m  proxy.m  tfp.m
Nyxian/LindChain/ProcEnvironment/Object/: MachOObject.m
Nyxian/LindChain/ProcEnvironment/Surface/: entitlement.m  surface.m  trust.m
Nyxian/LindChain/ProcEnvironment/Surface/ksys/: syscall.h  syscall.m
Nyxian/LindChain/ProcEnvironment/Surface/ksys/compat/: bamset.h  bamset.m  enttoken.h  enttoken.m  getent.h  getent.m  gettask.h  gettask.m  handoffep.h  handoffep.m  procpath.h  procpath.m  setent.h  setent.m  signexec.h  signexec.m
Nyxian/LindChain/ProcEnvironment/Surface/ksys/cred/: getgid.h  getgid.m  getpid.h  getpid.m  getsid.h  getsid.m  getuid.h  getuid.m  setgid.h  setgid.m  setpgrp.h  setpgrp.m  setsid.h  setsid.m  setuid.h  setuid.m
Nyxian/LindChain/ProcEnvironment/Surface/ksys/host/: bsd_types.h  ioctl.h  ioctl.m  proc_flags.h  proc_info_types.h  sysctl.h  sysctl.m
Nyxian/LindChain/ProcEnvironment/Surface/ksys/proc/: exit.h  exit.m  kill.h  kill.m  proc_info.h  proc_info.m  vm.h  vm.m  wait4.h  wait4.m
Nyxian/LindChain/ProcEnvironment/Surface/proc/: def.h  fork.m  proc.m
Nyxian/LindChain/ProcEnvironment/Surface/radix/: radix.c
Nyxian/LindChain/ProcEnvironment/Surface/sys/: syscall.h  syscall.m
Nyxian/LindChain/ProcEnvironment/Surface/sys/compat/: mach_vm.h  mach_vm.m
Nyxian/LindChain/ProcEnvironment/Surface/sys/cred/: setpgrp.h  setpgrp.m
Nyxian/LindChain/ProcEnvironment/Surface/sys/host/: bsd_types.h  proc_flags.h  proc_info_types.h  sysctl.h  sysctl.m
Nyxian/LindChain/ProcEnvironment/Surface/sys/proc/: proc_info.h  proc_info.m  vm.h  vm.m
Nyxian/LindChain/ProcEnvironment/Syscall/: mach_syscall_server.h  mach_syscall_server.m  payload.m
Nyxian/LindChain/Project/: NXCodeTemplate.h  NXPlistHelper.m  NXProject.h  NXProject.m
Nyxian/LindChain/Synpush/: Synpush.m
Nyxian/LindChain/Utils/: LDEThreadController.m
Nyxian/UI/: ContentView.swift
Nyxian/UI/CodeEditor/: CodeEditor+Coordinator.swift
Nyxian/UI/FileList/: FileList+iPad.swift  FileList.swift
Nyxian/UI/Settings/: ProcessMonitorViewController.swift  SettingsViewController.swift
Nyxian/UI/TableCells/: NXProjectTableCell.h  NXProjectTableCell.m
Shared/Templates/Application/Swift/: SceneDelegate.swift  ViewController.swift
Shared/Templates/Utility/Swift/: main.swift
build_test/: CMakeCache.txt  build.ninja  cmake_install.cmake
build_test/cmake/LLVM-On-iOS/: cmake_install.cmake
build_test/cmake/LLVM-On-iOS/llvm-stamp/: download-llvm_project.cmake  extract-llvm_project.cmake  llvm_project-urlinfo.txt
build_test/cmake/LLVM-On-iOS/llvm-tmp/: llvm_project-cfgcmd.txt  llvm_project-mkdirs.cmake
build_test/cmake/TrollStore/: cmake_install.cmake
build_test/cmake/libroot/: cmake_install.cmake
cmake/LLVM-On-iOS/: CMakeLists.txt
cmake/TrollStore/: CMakeLists.txt
cmake/libroot/: CMakeLists.txt
